# applied_ai_technical_screen

./: .coverage  .gitignore  .replit  README.md  app.py  pyproject.toml
.github/workflows/: replit-redeploy.yml
scripts/: start_streamlit.sh
tests/: test_agent.py  test_integration_agent.py  test_llm_fallback.py  test_presentation.py  test_retriever.py  test_ui_playwright.py
thoughtful_agent/: __init__.py  agent.py  llm_fallback.py  presentation.py  retriever.py  types.py
